--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<title>Impermeabilizantes</title>
+		<title>Infraestructura e interiores</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="estilos.css">
 		<link rel="stylesheet" type="text/css" href="css/fontello.css">
